themes/admin/zerosignal/css/stacks.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
.clearfix:after{clear:both;content:' ';display:block;font-size:0;height:0;line-height:0;visibility:hidden;width:0}* html .clearfix,:first-child+html .clearfix{zoom:1}


/* General Reset */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, hr, button{
	margin:0;
	padding:0;
	border:0;
	outline:0;
	font-size:100%;
	vertical-align: baseline;
	background:none;
}
ol, ul {list-style:none;}
h1, h2, h3, h4, h5, h6, li {line-height:100%; font-weight: 600}
blockquote, q {quotes:none;}
table { border-spacing:0; border-collapse: collapse; }
input, textarea, button {font-family:inherit; font-size:1em;}
/* General Settings*/
html{min-width:1002px; height:100%;}
body{
	height:100%;
	color:#888;
	min-width:1002px;
	font:13px 'Open Sans', sans-serif;
    background: #f5f3f1;
}
a{
	color:#000;
	text-decoration:none;
}
p { margin-bottom: 18px; line-height: 21px; }
a:hover{text-decoration:underline;}
a:focus{outline:none;}
input,textarea,select{
	font:11px Arial, Helvetica, sans-serif;
	vertical-align:middle;
	padding:0;
	margin:0;
}
form,fieldset{
	margin:0;
	padding:0;
	border-style:none;
}

/* wrapper start */
#wrapper{
	position:relative;
	overflow:hidden;
    background: #f5f3f1;
    margin: 0 auto;
    display: block;
}
.w1{
	position:relative;

}
.w2{
}

/* header start */
#header{
    background: #1c99c7; /* Old browsers */
    border-top: 5px solid #33B5E5;
}
.header-cell{
	padding:0;
	overflow:hidden;
    position: absolute;
    top: 0;
    right: 0;
}
.user-nav{
	float:right;
	overflow:hidden;
    border-radius: 0 0 5px 5px;
}
.user-nav li{
	float:left;
	display:inline;
	padding:0px 8px;
	font-size:11px;
	font-weight: 500;
    margin: 8px 0;
    border-left: 1px solid #45B2CE;
}

.user-nav li:first-child {
    border: none;
}

.user-nav li a{
	color:#fff;
	float:left;
}

.user-nav li a:hover{
	padding:0;
}
.header-area{ }
.header-area .logo{
	overflow:hidden;
	font-size:26px;
	line-height:28px;
    font-weight: 500;
    text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
}

.header-area .logo a{
	float:left;
	color:#142c35;
    padding: 30px 0;
    color: #fff;
}
.header-area .logo a:hover{
	text-decoration:none;
}

.header-area .img-logo img {
    height: auto !important;
    padding: 10px 0;
    max-height: 106px;
}

#header.minimal .logo {
    font-size: 18px;
    line-height: 20px;
}

#header.minimal .logo a {
    padding: 15px 0;
}

.header-box{
}

.header-box strong{
	float:left;
	color:#142c35;
	font-size:16px;
	line-height:18px;
	padding-top:34px;
	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
}
.header-box strong a{
	float:left;
	overflow:hidden;
	color:#142c35;
	
}
.header-box strong a:hover{
	text-decoration:none;
	border-bottom:1px solid #142c35;
}

#nav{
    width: 920px;
    margin: 0 auto;
}
#nav li{
    float:left; position: relative; z-index: 20;
    border-bottom: 3px solid transparent;
}
#nav a{
	float:left;
	color:#999999;
	font-size:14px;
	line-height:18px;
	padding: 10px 15px;
    font-weight: 600;
	text-decoration: none;
    -webkit-transition: .2s linear all;
    -moz-transition: .2s linear all;
    transition: .2s linear all;
}

#nav a:hover {
    color: #fff;
    
}

#nav li:hover,
#nav li.active {
	text-decoration:none;
    border-bottom: 3px solid #33b5e5;
}

#nav > li.active > a {
    color: #fff;
}

#nav li.subnav:hover a{
  
}

#nav li:hover > ul{
  display: block;
}

#nav .submenu{
  background: #3a3a3a;
  display:none;
  left:0;
  position:absolute;
  top:41px;
  width:305px;
  z-index:10;
}

#nav .submenu li{
  border-bottom: 1px solid #555;
  width: 100%;
}

#nav .submenu li:hover {
    background: #444;
}

#nav .submenu li:last-child{
  border-bottom: none;
}

#nav .submenu li a, #nav .submenu li a:hover, #nav li.subnav .submenu a{
  border: none;
  background: none;
}

#nav .submenu li a{
  margin:0;
  text-transform: none;
  float: none;
  display: block;
  
}
/* header end */

/* main start */
#main{
	clear:both;
	width:100%;
	padding:0 0 50px;
    background: #f5f3f1;
    margin-bottom: 111px;
}

.subbar {
    /*border-bottom: 1px solid #c5c0ba;*/
    background: #fbfbfb url(../img/subbar-repeat.png) repeat-x bottom left;
    padding-bottom: 12px;
}

.filters {
    float: right;
}

.content-container {
    /*border-top: 1px solid #fff;*/
    padding-top: 2em;
    
}

.promo-block{
	width:100%;
    background: url(../img/promo-repeat.png) repeat-x top left;
    margin-bottom: 50px;    
}
.promo-block .top{
	overflow:hidden;
    width: 920px;
    position: relative;
    margin: 0 auto;
    padding-top: 30px;
    padding-bottom: 30px;
}

.promo-block .top br {
    display: none;    
}

.ttl{
	float:left;
	color:#142c35;
	font-size:20px;
	line-height:22px;
	padding:0 0 2px 34px;
}
.module-title .ttl {
	margin-left:0px!important;
}
.ttl-small{
	float:left;
	color:#142c35;
	font-size:16px;
	line-height:22px;
	padding:2px 0 2px 40px;
}
.ttl-narrow{
	float:left;
	color:#142c35;
	font-size:16px;
	line-height:22px;
	padding:2px 0 2px 30px;
}
.promo-block .top .ttl1{background:url(../img/icon01.png) no-repeat;}

.btns-list{
	position:relative;
}
.btns-list li{
	float:left;
	margin-left:10px;
	margin-bottom:10px;
	display:inline;
}

.invoice-block > .btns-list {
    position: absolute;
    top: 10px;
    right: 0;
    
    /* hack until I can get a specific project page class */
    max-width: 500px;
}
/* ... */

